manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: logs-claim
        - name: shared-pongs
          persistentVolumeClaim:
            claimName: pongs-claim
      containers:
        - name: main-app-finder
          image: outisa/main-application-finder:bbe04ca99dace3912a9c76ced012fe466d748796
          volumeMounts:
          - name: shared-logs          
            mountPath: /app/files
          - name: shared-pongs
            mountPath: /app/pongs
        - name: main-app-generator
          image: outisa/main-application-generator:bbe04ca99dace3912a9c76ced012fe466d748796
          volumeMounts:
            - name: shared-logs
              mountPath: /app/files
