manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mainapp-namespace
  name: hashgenerator-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - name: http
      port: 2345
      protocol: TCP
      targetPort: 3003
