manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-material-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hashgenerator-svc
          servicePort: 2345
